test/classes/initializers/errors/generic-lhsInitRhsCons2.good
generic-lhsInitRhsCons2.chpl:20: error: type mismatch in assignment from hasConstruct(int(64)) to hasInit
